<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mydigikala.UserAccountFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_40mdp"
            android:layout_height="@dimen/_40mdp"
            android:rotation="180"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10mdp"
            android:text="@string/user_information"
            android:textColor="@color/black"
            android:textSize="@dimen/_15font_mdp"
            app:layout_constraintBottom_toBottomOf="@+id/back"
            app:layout_constraintEnd_toStartOf="@+id/back"
            app:layout_constraintTop_toTopOf="@+id/back" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constEdt"
        android:layout_marginTop="@dimen/_10mdp"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7">


        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_10mdp"
            android:hint="@string/firstname"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10mdp"
            android:layout_marginTop="@dimen/_10mdp"
            android:hint="@string/lastname"
            android:textColorHint="@color/black"

            app:layout_constraintTop_toBottomOf="@+id/firstName" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirmBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50mdp"
        app:layout_constraintTop_toBottomOf="@+id/constEdt"
        android:layout_marginTop="@dimen/_10mdp"
        android:backgroundTint="@color/green"
        android:layout_marginHorizontal="@dimen/_10mdp"
        android:text="@string/confirm_information"
        android:textSize="@dimen/_15font_mdp"/>






</androidx.constraintlayout.widget.ConstraintLayout>