<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.confirmpurchase.ConfirmPurchasesFragment">











    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/_15font_mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            android:id="@+id/pardakhtTxt"
            android:text="@string/final_price"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/_15font_mdp"
            android:layout_marginStart="@dimen/_10mdp"
            android:id="@+id/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>








    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLay2"
        android:layout_marginTop="@dimen/_10mdp"
        app:layout_constraintTop_toBottomOf="@id/constLay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/_15font_mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txtSituation"
            android:text="@string/order_status"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/_15font_mdp"
            android:layout_marginStart="@dimen/_10mdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/situation"
            android:text="@string/unpaid"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/_120mdp"
            android:layout_height="@dimen/_20mdp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constLay3"
        android:layout_marginTop="@dimen/_10mdp"
        app:layout_constraintTop_toBottomOf="@id/constLay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/_15font_mdp"
            android:layout_marginEnd="@dimen/_10mdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/txtOrderCode"
            android:text="@string/order_code"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_marginStart="@dimen/_10mdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_15font_mdp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/orderCode"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/backToPreviousPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30mdp"
        android:backgroundTint="@color/red"
        android:text="@string/return_to_home_page"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constLay3" />



</androidx.constraintlayout.widget.ConstraintLayout>
